# sercalo_filter

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
_hardware/Mecânico/: Montagem-prateleira.stl  Montagem-suporte_placa.stl  Montagem.20250714-190443.FCBak  Montagem.FCStd
_hardware/PCB/filtro_sint/: filtro_sint.kicad_pcb  filtro_sint.kicad_pro  filtro_sint.kicad_sch
components/sercalo_i2c_driver/: CMakeLists.txt  sercalo_i2c.c
components/sercalo_i2c_driver/include/: sercalo_i2c.h
interface/: README.md  communication.py  main.py  main_window.py
interface/widgets/: base_widget.py  get_iden_widget.py  get_wl_widget.py  set_wl_widget.py  sweep_widget.py
main/: CMakeLists.txt  main.c
